src/test/ui/internal/internal-unstable-const.stderr
error[E0744]: `loop` is not allowed in a `const fn`
  --> $DIR/internal-unstable-const.rs:9:5
   |
LL |     loop { return 42; }
   |     ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0744`.
